--- a/Game/LifeQuest/Export/LifeQuestTest.html
+++ b/Game/LifeQuest/Export/LifeQuestTest.html
@@ -137,7 +137,7 @@ body {
 
 		<script src="LifeQuestTest.js"></script>
 		<script>
-const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"executable":"LifeQuestTest","experimentalVK":false,"fileSizes":{"LifeQuestTest.pck":8256,"LifeQuestTest.wasm":49219187},"focusCanvas":true,"gdextensionLibs":[]};
+const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"executable":"LifeQuestTest","experimentalVK":false,"fileSizes":{"LifeQuestTest.pck":2566592,"LifeQuestTest.wasm":35649444},"focusCanvas":true,"gdextensionLibs":[]};
 const engine = new Engine(GODOT_CONFIG);
 
 (function () {
